--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "colors": "0",
     "core-assert": "0",
+    "nano-json": "1",
     "istanbul": "0",
     "mocha": "2",
     "grunt": ">= 0.4.5",
