--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nanomarkdown",
+  "name": "nano-markdown",
   "version": "1.1.3",
   "description": "A minimal markdown to html converter",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Holixus/nanomarkdown.git"
+    "url": "https://github.com/Holixus/nano-markdown.git"
   },
   "keywords": [
     "markdown",
@@ -32,7 +32,7 @@
   "author": "Vladimir Antonov",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Holixus/nanomarkdown/issues"
+    "url": "https://github.com/Holixus/nano-markdown/issues"
   },
-  "homepage": "https://github.com/Holixus/nanomarkdown"
+  "homepage": "https://github.com/Holixus/nano-markdown"
 }
