--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal markdown to html converter",
   "main": "index.js",
   "scripts": {
-    "prepublish": "grunt",
+    "build": "grunt",
     "test": "mocha --reporter spec -u tdd",
     "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot -u tdd",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter dot -u tdd"
