--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-markdown",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A minimal markdown to html converter",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "devDependencies": {
     "colors": "0",
     "core-assert": "0",
+    "nano-timer": "1",
     "nano-json": "1",
     "istanbul": "0",
     "mocha": "2",
