--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "A minimal markdown to html converter",
   "main": "index.js",
+  "browser": "dist/nanomd.min.js",
   "scripts": {
     "build": "grunt",
     "test": "mocha --reporter spec -u tdd",
