added some keywords to the package.json

--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "keywords": [
     "markdown",
-    "html"
+    "html",
+    "small",
+    "micro",
+    "nano"
   ],
   "author": "Vladimir Antonov",
   "license": "MIT",
