--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter dot -u tdd"
   },
   "devDependencies": {
-    "colors": "0",
-    "core-assert": "0",
-    "nano-timer": "1",
-    "nano-json": "1",
-    "istanbul": "0",
-    "mocha": "2",
+    "colors": ">= 0.6.1",
+    "core-assert": "",
     "grunt": ">= 0.4.5",
-    "gzip-js": ">= 0.3.1",
-    "grunt-contrib-uglify": ">= 0.2.2",
     "grunt-compare-size": ">= 0.0.0",
-    "colors": ">= 0.6.1"
+    "grunt-contrib-uglify": ">= 0.2.2",
+    "gzip-js": ">= 0.3.1",
+    "istanbul": "0",
+    "mocha": "10",
+    "nano-json": "1",
+    "nano-timer": "1"
   },
   "repository": {
     "type": "git",
